# typscord

./: .dockerignore  .gitignore  COPYING.md  Cargo.toml  Dockerfile  README.md  discord.json  fly.toml  register.nu  rustfmt.toml
.github/: FUNDING.yml
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/interaction/: Cargo.toml
crates/interaction/src/: buffer.rs  lib.rs  preamble.typ
crates/interaction/src/string/: mod.rs  tests.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: file.rs  font.rs  lib.rs  library.rs
interaction/src/: lib.rs
renderer/: Cargo.toml
src/: main.rs  web.rs  worker.rs
world/: Cargo.toml
world/src/: file.rs  font.rs  lib.rs
