[package]
name = "discordyst-world"
version = "0.1.0"

[package.edition]
workspace = true

[dependencies]
ttf-parser = { version = "0.25", default-features = false, features = ["std"] }
typst.workspace = true
typst-assets.workspace = true
typst-library.workspace = true
typst-render.workspace = true
typst-syntax.workspace = true
typst-utils.workspace = true
