[package]
name = "typscord-interaction"
version = "0.1.0"
edition.workspace = true

[dependencies]
typscord-http.workspace = true
serde_json = { version = "1", default-features = false }
tokio = { version = "1.47", features = ["rt", "process", "io-util"] }
tracing.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
