[package]
name = "typscord-world"
version = "0.1.0"

[package.edition]
workspace = true

[dependencies]
bytemuck = "1.23"
ecow = { version = "0.2", default-features = false }
image = { version = "0.25", default-features = false, features = ["rayon", "webp"] }
time = "0.3"
ttf-parser = { version = "0.25", default-features = false, features = ["std"] }
typst = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
typst-render = "0.13"
